<resources>
    <string name="app_name">kalkulatorBMI</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="bmi_atau_body_mass_index_merupakan_cara_untuk_menentukan_apakah_berat_badanmu_ideal_atau_tidak_n_cobalah_sekarang">
        BMI atau Body Mass Index merupakan cara untuk menentukan apakah berat badanmu ideal atau tidak. Cobalah sekarang
    </string>
    <string name="berat_badan">Berat Badan (kg)</string>
    <string name="tinggi_badan">Tinggi Badan (cm)</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="pria">Pria</string>
    <string name="wanita">Wanita</string>
    <string name="hitung">Hitung</string>
</resources>
