<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".Kalkulator">

    <!-- TODO: Update blank fragment layout -->
    <TextView
            android:id="@+id/ket"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/bmi_atau_body_mass_index_merupakan_cara_untuk_menentukan_apakah_berat_badanmu_ideal_atau_tidak_n_cobalah_sekarang"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"


    />
    <TextView android:id="@+id/berat" android:layout_width="wrap_content" android:layout_height="wrap_content"
              app:layout_constraintStart_toStartOf="@+id/ket"
              app:layout_constraintTop_toBottomOf="@+id/ket"
              android:layout_marginTop="30dp"
              android:text="@string/berat_badan"
              android:layout_marginStart="10dp"
              android:layout_marginLeft="10dp"/>
    <EditText android:id="@+id/berat_input" android:layout_width="200dp" android:layout_height="wrap_content"
              app:layout_constraintStart_toEndOf="@+id/berat"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintTop_toTopOf="@+id/berat"
              android:inputType="number"


    />
    <TextView android:id="@+id/tinggi" android:layout_width="wrap_content" android:layout_height="wrap_content"
              app:layout_constraintStart_toStartOf="@+id/ket"
              app:layout_constraintTop_toBottomOf="@+id/berat"
              android:layout_marginTop="30dp"
              android:text="@string/tinggi_badan"
              android:layout_marginStart="10dp"
              android:layout_marginLeft="10dp"

    /><EditText android:id="@+id/tinggi_input" android:layout_width="200dp" android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/tinggi"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tinggi"
                android:inputType="number"/>

    <TextView android:id="@+id/kelamin" android:layout_width="wrap_content" android:layout_height="wrap_content"
              app:layout_constraintStart_toStartOf="@+id/tinggi"
              app:layout_constraintTop_toBottomOf="@+id/tinggi"
              android:layout_marginTop="30dp"
              android:text="@string/jenis_kelamin"
              android:layout_marginStart="10dp"
              android:layout_marginLeft="10dp"

    />
    <RadioGroup android:id="@+id/radio" android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toEndOf="@+id/kelamin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tinggi_input">
        <RadioButton android:id="@+id/pria"
                     android:text="@string/pria"
                     android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        <RadioButton
                android:id="@+id/wanita"
                android:text="@string/wanita" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    </RadioGroup>
    <Button android:id="@+id/hitung" android:layout_width="wrap_content" android:layout_height="wrap_content"

            app:layout_constraintStart_toStartOf="@+id/radio"
            android:text="@string/hitung"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/radio"/>
    <TextView android:id="@+id/hasil" android:layout_width="wrap_content" android:layout_height="wrap_content"
              app:layout_constraintTop_toBottomOf="@+id/hitung"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginTop="20dp"

    />
    <TextView android:id="@+id/ideal" android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text=""
              android:textSize="64sp"
              app:layout_constraintTop_toBottomOf="@id/hasil"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginTop="20dp"

    />
        <Button
                android:id="@+id/saran" android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="Saran"
        app:layout_constraintTop_toBottomOf="@id/ideal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>